@@ -79,7 +79,7 @@ sig
     val iter_constr : (Constr.t -> unit) -> t -> unit
 
     (** Reduce all terms in a given declaration to a single value. *)
-    val fold : (Constr.t -> 'a -> 'a) -> t -> 'a -> 'a
+    val fold_constr : (Constr.t -> 'a -> 'a) -> t -> 'a -> 'a
 
     val to_tuple : t -> Name.t * Constr.t option * Constr.t
   end
@@ -192,7 +192,7 @@ sig
     val iter_constr : (Constr.t -> unit) -> t -> unit
 
     (** Reduce all terms in a given declaration to a single value. *)
-    val fold : (Constr.t -> 'a -> 'a) -> t -> 'a -> 'a
+    val fold_constr : (Constr.t -> 'a -> 'a) -> t -> 'a -> 'a
 
     val to_tuple : t -> Id.t * Constr.t option * Constr.t
     val of_tuple : Id.t * Constr.t option * Constr.t -> t
